# models_compression

./: README.md  pyproject.toml
notebooks/: bert_optimum.ipynb  clusterization.ipynb  quantize&prunning.ipynb  swin_distillation.ipynb  swin_test.ipynb  swin_train.ipynb  vit_model_Optimum.ipynb
